# python-code

./: Pipfile  butane_config.yml
oldsite/: template2.py  user.py
oldsite/db/: dB.py
oldsite/lib/: globals.py  sess_cookie.py
oldsite/templates/: base.html  index.html  message.txt
quart/: app.py
site/: app-quart-crap.py  app.py  exceptions.py  logger.py  secret.py
site/db/: queries.py
site/lib/: quartProd  sess_cookie.py  signals.py
site/scripts/: prod_settings.Config
site/templates/: register.html
sitelogin/: .env  Dockerfile  __init__.py  admin.py  app-old.py  app.py  backends.py  base.py  config.py  cookie.py  dB.py  endpoints.py  exceptions.py  forms.py  headers.py  hypercorn.conf  login_manager.py  loginnew.py  main-old.py  main.py  message_logger.py  middleware.py  mixins.py  playground-1.mongodb.js  redis.py  register.py  requirements.txt  routes.py  session.py  tokens.py  user.py  vyos_basic.cfg
sitelogin/app/: .env  Dockerfile  app-old.py  app.py  csrf.py  endpoints.py  forms.py  future.py  memtest.py  middleware.py  requirements.txt  routes.py  testform.py  user.py  utils.py
sitelogin/captcha-source/: Cargo.toml  rustbuild.sh  rustsetup.sh
sitelogin/captcha-source/src/: main.rs
sitelogin/db/: dB.py  playground-1.mongodb.js  shema.mongo
sitelogin/keys/: nix.onion-key.pem  nix.onion.pem
sitelogin/lib/: admin.py  backends.py  base.py  config.py  cookie.py  crypto.py  decorator.py  formparser.py  hcLoop.py  locker.luser0.json  logging.py  login.py  login_andA_register-old.py.py  login_manager.py  main.py  memory.py  middleware.py  (+11 more)
(+23 files in other folders)
